--- a/assets/languages/nl_NL.json
+++ b/assets/languages/nl_NL.json
@@ -17,92 +17,92 @@
     "btn_set_goal": "Stel Doel",
     "btn_exchange": "Uitwisselen",
     "btn_inventory": "Inventaris",
-    "btn_close_smallcaps": "Close",
-    "btn_close_caps": "CLOSE",
+    "btn_close_smallcaps": "Sluit",
+    "btn_close_caps": "SLUIT",
     "btn_open_smallcaps": "Open",
-    "btn_cancel": "Cancel",
+    "btn_cancel": "Annuleer",
     "btn_update": "Update",
     "btn_ok_caps": "OK",
     "label_enable_native": "Native Mode",
     "label_enable_electrum": "Electrum Mode",
-    "yes_caps": "YES",
-    "yes_small": "Yes",
-    "no_caps": "NO",
-    "no_small": "No",
-    "tx_from": "From",
-    "tx_to": "To",
-    "tx_amount": "Amount",
-    "tx_fees": "Fees",
-    "tx_total": "Total"
+    "yes_caps": "JA",
+    "yes_small": "Ja",
+    "no_caps": "NEE",
+    "no_small": "Nee",
+    "tx_from": "Van",
+    "tx_to": "Naar",
+    "tx_amount": "Aantal",
+    "tx_fees": "Kosten",
+    "tx_total": "Totaal"
   },
   "loading": {
-    "starting_barterdex": "Starting BarterDEX. Please wait..."
+    "starting_barterdex": "BarterDEX wordt gestart. Even geduld..."
   },
   "CoinControl": {
-    "coincontrol_toastr_title_coin_status": "Coin Status",
-    "coincontrol_enabled": "Enabled",
-    "coincontrol_disabled": "Disabled",
-    "coincontrol_enable": "Enable",
-    "coincontrol_disable": "Disable",
+    "coincontrol_toastr_title_coin_status": "Munt Status",
+    "coincontrol_enabled": "Actief",
+    "coincontrol_disabled": "gedeactiveerd",
+    "coincontrol_enable": "Activeer",
+    "coincontrol_disable": "Deactiveer",
     "coincontrol_native_mode": "Native Mode",
     "coincontrol_electrum_mode": "Electrum Mode",
-    "coincontrol_couldnt_find_coin_locally_installed": "Couldn't find an installation of this coin",
-    "coincontrol_it_seems_you_dont_have_p1": "It appears you don't have an installation of this coin's wallet on your computer. If you believe this is an error, please make sure the following steps are complete:",
-    "coincontrol_it_seems_you_dont_have_check_points_li_01": "The coin's wallet is properly installed.",
-    "coincontrol_it_seems_you_dont_have_check_points_li_02": "The wallet is running on your machine, and the wallet is synced to its network.",
-    "coincontrol_it_seems_you_dont_have_check_points_li_03": "The wallet has the proper RPC settings in its configuration file.",
-    "coincontrol_it_seems_you_dont_have_check_points_li_04": "If the above steps are complete, then BarterDEX may simply need to be refreshed. Please log out of BarterDEX, log in again, and reactivate your coin.",
-    "coincontrol_it_seems_you_dont_have_p2": "If this does not resolve the issue, please reach out to our support team."
+    "coincontrol_couldnt_find_coin_locally_installed": "Geen installatie gevonden van deze munt",
+    "coincontrol_it_seems_you_dont_have_p1": "Het lijkt erop dat u geen wallet voor deze munt geinstalleerd hebt op uw pc. Als u denkt dat dit een vergissing is, graag controleren of de volgende stappen gevolgd zijn.",
+    "coincontrol_it_seems_you_dont_have_check_points_li_01": "Installatie voor de wallet van de munt is gelukt.",
+    "coincontrol_it_seems_you_dont_have_check_points_li_02": "De wallet draait op uw machine, en de wallet is gesynchroniseerd met zijn netwerk.",
+    "coincontrol_it_seems_you_dont_have_check_points_li_03": "De wallet heeft de juiste RPC instellingen en zijn configuratiebestand.",
+    "coincontrol_it_seems_you_dont_have_check_points_li_04": "Als de bovenstaande stappen klaar zijn, dan dient BarterDEX gewoon vernieuwd te worden. Graag uitloggen uitBarterDEX, log opnieuw in, en reactiveer uw munt.",
+    "coincontrol_it_seems_you_dont_have_p2": "Als dit het probleem niet oplost, graag contact opnemen met ons support team."
   },
   "login": {
-    "welcome_to_barterdex": "Welcome to BarterDEX",
-    "please_login": "Please Log In",
-    "passphrase": "Passphrase",
-    "login_passphrase_label": "Log In",
-    "login_btn": "Log In",
-    "generate_a_new_passphrase": "Generate a New Passphrase",
-    "login_passphrase_input_placeholder": "Passphrase",
-    "login_genpass_new_pass_label": "New Passphrase",
+    "welcome_to_barterdex": "Welkom op BarterDEX",
+    "please_login": "Inloggen aub",
+    "passphrase": "Wachtwoordzin",
+    "login_passphrase_label": "Inloggen",
+    "login_btn": "Inloggen",
+    "generate_a_new_passphrase": "Genereer een Nieuwe Wachtwoordzin",
+    "login_passphrase_input_placeholder": "Wachtwoordzin",
+    "login_genpass_new_pass_label": "Nieuwe Wachtwoordzin",
     "login_genpass_regen": "Regen",
-    "login_genpass_verify_passphrase": "Verify Passphrase",
-    "login_genpass_repeat_the_pass_here_placeholder": "Repeat the passphrase here, as shown in the first input field.",
-    "login_genpass_click_on_regen_button": "Click the \"Regen\" button to generate a new passphrase.",
-    "login_genpass_make_sure_to_save_new_pass": "Save this new passphrase in a secure location.<br> To confirm that you have saved it, please type the passphrase in the \"Verify Passphrase\" field.",
-    "login_genpass_login_with_new_pass": "Log in with your new passphrase."
+    "login_genpass_verify_passphrase": "Verifieer Wachtwoordzin",
+    "login_genpass_repeat_the_pass_here_placeholder": "Herhaal de wachtwoordzin hier, zoals getoond in de eerste invulveld.",
+    "login_genpass_click_on_regen_button": "Klik op de \"Regen\" knop op een nieuwe wachtwoordzin te genereren.",
+    "login_genpass_make_sure_to_save_new_pass": "Sla deze nieuwe wachtwoordzin op op een veilige locatie.<br> Ter bevestiging dat je het hebt opgeslagen, Graag de wachtwoordzin intypen in de \"Verifieer Wachtwoordzin\" veld.",
+    "login_genpass_login_with_new_pass": "Log in met je nieuwe wachtwoordzin."
   },
   "Navigation": {
     "nav_dashboard": "Dashboard",
-    "nav_trade_history": "Trade History",
-    "nav_close" : "Close",
+    "nav_trade_history": "Handelsgeschiedenis",
+    "nav_close" : "Sluit",
     "nav_debug": "Debug",
-    "nav_settings": "Settings",
-    "nav_logout": "Log Out"
+    "nav_settings": "Instellingen",
+    "nav_logout": "Uitloggen"
   },
   "Debug": {
     "debug_payload": "Payload",
-    "debug_execute": "Execute",
-    "debug_response": "Response",
-    "debug_playload_input_placeholder": "Provide payload."
+    "debug_execute": "Uitvoeren",
+    "debug_response": "Reactie",
+    "debug_playload_input_placeholder": "Voorzie payload."
   },
   "Portfolio": {
-    "portfolio_portfolio_chart": "Portfolio Chart",
-    "portfolio_add_coins": "ADD COINS",
-    "exchange_set_small": "Sell",
-    "exchange_goal_percent_for_your_portfolio": "Percentage goal for your portfolio",
-    "portfolio_portfolio_coins": "Portfolio Coins",
-    "portfolio_auto_goal_all_active_coins": "AUTO GOAL ALL ACTIVE COINS",
-    "portfolio_th_coin": "Coin",
-    "portfolio_th_balance": "Balance",
-    "portfolio_th_price": "Price",
-    "portfolio_th_current_percent": "Current %",
-    "portfolio_th_goal_percent": "Goal %",
-    "portfolio_th_kmdvalue": "KMD Value",
-    "portfolio_th_action": "Action",
-    "portfolio_goal": "Goal",
-    "portfolio_goal_now": "Now",
-    "portfolio_goal_target": "Target",
-    "portfolio_set_goal_percentage_for_your_portfolio": "Set percentage goal for your portfolio",
-    "portfolio_set_goal": "Set Goal",
+    "portfolio_portfolio_chart": "Portfolio Grafiek",
+    "portfolio_add_coins": "VOEG MUNTEN TOE",
+    "exchange_set_small": "Verkoop",
+    "exchange_goal_percent_for_your_portfolio": "Percentage doel voor uw portfolio",
+    "portfolio_portfolio_coins": "Portfolio Munten",
+    "portfolio_auto_goal_all_active_coins": "AUTO DOEL ALLE ACTIEVE MUNTEN",
+    "portfolio_th_coin": "Munt",
+    "portfolio_th_balance": "Balans",
+    "portfolio_th_price": "Prijs",
+    "portfolio_th_current_percent": "Huidige %",
+    "portfolio_th_goal_percent": "Doel %",
+    "portfolio_th_kmdvalue": "KMD Waarde",
+    "portfolio_th_action": "Actie",
+    "portfolio_goal": "Doel",
+    "portfolio_goal_now": "Nu",
+    "portfolio_goal_target": "Beoogde doel",
+    "portfolio_set_goal_percentage_for_your_portfolio": "Stel percentage in voor beoogde doel voor uw portfolio",
+    "portfolio_set_goal": "Stel doel in",
     "portfolio_auto_goal_all_text": "Are you sure you want to enbale the Auto Goal feature for all active and enabled coins?<br>This will reset all existing goals and you will have to set each individual coin's goal again. Please click Yes to proceed, or hit No to cancel.",
     "portfolio_set_auto_goal_executed": "Auto Goal executed for all active coins. Make sure you enable Auto Price for each coin.",
     "portfolio_receive_address_dialog_01": "If you are sending a transaction to your BarterDEX smartaddress, ",
